dev/test_data/smoke/test_main/unexpected/parse_error/meta_model.py
class Something:
    pass


# No book version will cause an error.
